[gd_scene load_steps=3 format=3 uid="uid://sdfyq58n6lj0"]

[ext_resource type="Script" uid="uid://cq1fhsij50742" path="res://scripts/UI/UpgradeMenu/upgrade_stat.gd" id="1_08jqp"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_2odss"]
size = Vector2(50, 50)

[node name="UpgradeStat" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08jqp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StatNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stat Name"

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "300"

[node name="StatButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("PlaceholderTexture2D_2odss")
texture_pressed = SubResource("PlaceholderTexture2D_2odss")
texture_hover = SubResource("PlaceholderTexture2D_2odss")
texture_disabled = SubResource("PlaceholderTexture2D_2odss")
texture_focused = SubResource("PlaceholderTexture2D_2odss")
stretch_mode = 4

[connection signal="renamed" from="MarginContainer/HBoxContainer/StatButton" to="." method="onButtonClick"]
